<resources>
    <string name="app_name">Calculator</string>
    <string name="divide_zero">Cannot divide by zero</string>
    <string name="null_data">You forgor💀💀💀</string>
    <string name="wrong_format">Check you input data for correctness</string>
    <string name="wrong_operation">Check you operation, app can calculate operations: +, -, *, / </string>
    <string name="input_operation">Input operation</string>
    <string name="input_first">Input first number</string>
    <string name="input_second">Input second number</string>
    <string name="Calculate">Calculate</string>
    <string name="Result">Result</string>
</resources>